src/css/navbar.css
.home-navbar {
  width: 100%;
  height: 860px;
  display: flex;
  background: url("/img/amaya-banner.jpg") lightgray 0px 0px / 100% 100%
    no-repeat;
  background-size: cover;
}

.home-navbar .navbar-container {
  /* margin-top: 35px; */
  width: 100%;
  height: 642px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.home-navbar .top-add {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  background: #242434;
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-navbar .top-add .top-add-content {
  width: 100%;
  max-width: 1300px;
  padding: 0 24px;
  box-sizing: border-box;
  height: 42px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.home-navbar .top-add .top-add-content .top-content-text {
  color: #fff;
  font-family: "Raleway";
  font-size: 11.9px;
  font-style: normal;
  font-weight: 500;
  line-height: 29.75px; /* 250% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

.home-navbar .top-add .top-add-content .top-content-text:hover {
  color: #db9457;
  transition: all 1s ease;
}

.home-navbar .navbar-cover {
  width: 100%;
  height: 92px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* background-color: rgba(255, 255, 255, 0.9); */
  background-color: #f8f8ffd9;
  box-shadow: 0px 0px 24px 0px rgba(10, 10, 20, 0.06);
  z-index: 1059;
}

.home-navbar .navbar-container .menu {
  width: 100%;
  max-width: 1300px;
  padding: 0 24px;
  box-sizing: border-box;
  height: 50px;
  z-index: 10000;
}

.home-navbar .navbar-container .menu .user-avatar {
  width: 50px;
  height: 50px;
  border-radius: 24px;
}

.home-navbar a {
  text-decoration: none;
}

.home-navbar .hover-line a {
  color: #101020;
  text-align: center;
  font-family: "Raleway";
  font-size: 12.9px;
  font-style: normal;
  font-weight: 600;
  line-height: 29.75px; /* 250% */
  letter-spacing: 2px;
  text-transform: uppercase;
  z-index: 100;
}

.home-navbar .underline {
  display: block;
  content: "";
  border-bottom: solid 2px #db9457;
}

.home-navbar .hover-line:after {
  display: block;
  content: "";
  border-bottom: solid 2px #d7b686;
  transform: scaleX(0);
  transition: transform 250ms ease-in-out;
}

.home-navbar .hover-line:hover:after {
  transform: scaleX(1);
}

.home-navbar div.hover-line:after {
  transform-origin: 0% 50%;
}

.home-navbar .navbar-container .header-frame {
  margin-top: 134px;
  width: 100%;
  height: 637px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
}

.home-navbar .navbar-container .header-frame .horizontal-text {
  /* width: 111.372px;
  height: 16px; */
  transform: rotate(-90deg);
  color: #3a3a3b;
  text-align: center;
  font-family: Raleway;
  font-size: 13.6px;
  font-style: normal;
  font-weight: 500;
  line-height: 29.75px; /* 218.75% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

.home-navbar .navbar-container .header-frame .detail {
  width: 550px;
  display: flex;
  flex-direction: column;
}

.home-navbar .navbar-container .header-frame .detail .service-txt {
  margin-top: 60px;
  color: #db9457;
  font-family: "Raleway";
  font-size: 13.6px;
  font-style: normal;
  font-weight: 500;
  line-height: 23.8px; /* 175% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

.home-navbar .navbar-container .header-frame .detail .head-main-txt {
  width: 423.035px;
  margin-top: 8px;
  margin-bottom: 20px;
  color: #101020;
  font-family: "Playfair Display";
  font-size: 53.1px;
  font-style: normal;
  font-weight: 500;
  line-height: 58.44px; /* 110.056% */
}

.home-navbar .navbar-container .header-frame .detail .dBaWmh {
  margin-top: 20px;
  width: 40px;
}

.home-navbar .navbar-container .header-frame .detail .wel-txt {
  margin-top: 44px;
  width: 460.51px;
  color: #3a3a3b;
  font-family: Raleway;
  font-size: 17px;
  font-style: normal;
  font-weight: 400;
  line-height: 29.75px; /* 175% */
}

.home-navbar .navbar-container .header-frame .detail .signup {
  margin-top: 73px;
}

.signup-button:hover {
  background: #db9457;
  color: #fff;
}

.home-navbar .navbar-cover .menu .brand-logo {
  height: 44px;
  width: 106px;
  background: url("/img/amaya-logo.png");
  background-size: cover;
  background-repeat: no-repeat;
}

/****************************   OTHER NAVBAR  ******************************/

.other-navbar .navbar-cover .menu .brand-logo {
  height: 44px;
  width: 106px;
  background: url("/img/amaya-logo.png");
  background-size: cover;
  background-repeat: no-repeat;
}

.other-navbar {
  width: 100%;
  height: 400px;
  display: flex;
  background: url("/img/banner.jpg");
  background-size: cover;
}

.other-navbar .navbar-container {
  /* margin-top: 35px; */
  width: 100%;
  height: 642px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.other-navbar .top-add {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  background: #242434;
  display: flex;
  justify-content: center;
  align-items: center;
}

.other-navbar .top-add .top-add-content {
  width: 100%;
  max-width: 1300px;
  padding: 0 24px;
  box-sizing: border-box;
  height: 42px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.other-navbar .top-add .top-add-content .top-content-text {
  color: #fff;
  font-family: "Raleway";
  font-size: 11.9px;
  font-style: normal;
  font-weight: 500;
  line-height: 29.75px; /* 250% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

.other-navbar .navbar-cover {
  width: 100%;
  height: 92px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: rgba(255, 255, 255, 0.9);
  box-shadow: 0px 0px 24px 0px rgba(10, 10, 20, 0.06);
  z-index: 1059;
}

.other-navbar .navbar-container .menu {
  width: 100%;
  max-width: 1300px;
  padding: 0 24px;
  box-sizing: border-box;
  height: 50px;
  z-index: 10000;
}

.other-navbar .navbar-container .menu .user-avatar {
  width: 50px;
  height: 50px;
  border-radius: 24px;
}

.other-navbar a {
  text-decoration: none;
}

.other-navbar .hover-line a {
  color: #101020;
  text-align: center;
  font-family: "Raleway";
  font-size: 12.9px;
  font-style: normal;
  font-weight: 600;
  line-height: 29.75px; /* 250% */
  letter-spacing: 2px;
  text-transform: uppercase;
  z-index: 100;
}

.other-navbar .underline {
  display: block;
  content: "";
  border-bottom: solid 2px #db9457;
}

.other-navbar .hover-line:after {
  display: block;
  content: "";
  border-bottom: solid 2px #d7b686;
  transform: scaleX(0);
  transition: transform 250ms ease-in-out;
}

.other-navbar .hover-line:hover:after {
  transform: scaleX(1);
}

.other-navbar div.hover-line:after {
  transform-origin: 0% 50%;
}

.other-navbar .navbar-container .header-frame {
  margin-top: 134px;
  width: 100%;
  height: 637px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.other-navbar .navbar-container .header-frame .detail {
  width: 550px;
  display: flex;
  flex-direction: column;
}

.other-navbar .navbar-container .header-frame .detail .service-txt {
  margin-top: 60px;
  color: #db9457;
  font-family: "Raleway";
  font-size: 13.6px;
  font-style: normal;
  font-weight: 500;
  line-height: 23.8px; /* 175% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

.other-navbar .navbar-container .header-frame .detail .head-main-txt {
  width: 423.035px;
  margin-top: 8px;
  color: #101020;
  font-family: "Playfair Display";
  font-size: 53.1px;
  font-style: normal;
  font-weight: 500;
  line-height: 58.44px; /* 110.056% */
}

.other-navbar .navbar-container .header-frame .detail .dBaWmh {
  margin-top: 20px;
  width: 40px;
}

.other-navbar .navbar-container .header-frame .detail .wel-txt {
  margin-top: 44px;
  width: 460.51px;
  color: #3a3a3b;
  font-family: Raleway;
  font-size: 17px;
  font-style: normal;
  font-weight: 400;
  line-height: 29.75px; /* 175% */
}

.other-navbar .navbar-container .header-frame .detail .signup {
  margin-top: 73px;
}

.other-navbar .navbar-container .header-frame .detail .signup .signup-button {
  width: 210px;
  height: 60px;
  border: 2px solid #db9457;
  padding: 13px 37.695px 14.75px 38px;
  background: white;
  color: #666;
  text-align: center;
  font-family: Raleway;
  font-size: 13.6px;
  font-style: normal;
  font-weight: 500;
  line-height: 29.75px; /* 218.75% */
  letter-spacing: 2px;
  text-transform: uppercase;
}

